<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <EditText
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/outline"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/_dynamic"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <ImageView
        android:id="@+id/picture_preview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/profile"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_person_outline_black_24dp" />

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_outline"
        android:padding="5dp"
        android:text="@string/take_photo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toEndOf="@+id/picture_preview"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="385dp"
        android:layout_height="192dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_take_photo" />

    <Button
        android:id="@+id/btn_capture_location"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_outline"
        android:padding="5dp"
        android:text="@string/capture_location"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/btn_save_local_to_db"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:background="@drawable/button_outline"
        android:padding="5dp"
        android:text="@string/save_local"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/btn_user_list"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_capture_location"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_user_list"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:background="@drawable/button_outline"
        android:padding="5dp"
        android:text="@string/list"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/btn_upload_users"
        app:layout_constraintStart_toEndOf="@+id/btn_save_local_to_db"
        app:layout_constraintTop_toTopOf="@+id/btn_save_local_to_db"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_upload_users"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_outline"
        android:padding="5dp"
        android:text="@string/upload"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/btn_user_list"
        app:layout_constraintTop_toTopOf="@+id/btn_user_list" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>